fix card height overflow

--- a/css/cards.css
+++ b/css/cards.css
@@ -142,7 +142,8 @@
 
 .img-box {
   width: 100%;
-  
+  height: 16rem;
+  overflow: hidden;
 }
 
 .card-body {
